fixed show pass visible while null

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -71,7 +71,7 @@ form div,
   visibility: hidden;
   position: absolute;
   right: 5%;
-  top: 40%;
+  top: 35%;
 }
 
 /* #check {
